# cost-report-ai-python

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: __init__.py  config.py
src/api/: __init__.py  main.py  routes.py  schemas.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  enums.py  lineage.py  models.py  pipline.py
src/export/: __init__.py  hfs_export.py
src/facilities/: __init__.py  base.py  hha.py  hospice.py  hospital.py  registry.py  snf.py
src/ingestors/: __init__.py  base_parser.py  census_parser.py  payroll_parser.py  psr_parser.py  trial_balance_parser.py
src/llm/: __init__.py  classifier.py  prompts.py
tests/: __init__.py  test_facilities.py  test_lineage.py  test_models.py  test_parsers.py
