[project]
name = "cost-report-ai"
version = "1.0.0"
description = "Enterprise-grade Python AI SaaS backend for Medicare Cost Report preparation. Ingests unstructured healthcare financial data, performs AI-powered GL-to-CMS cost center mapping, runs step-down allocation, and exports HFS-compatible import files."
authors = [
    { name = "Cost Report AI", email = "dev@costreportai.com" }
]
license = { text = "Proprietary" }
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Data processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "python-multipart>=0.0.18",

    # LLM / AI
    "litellm>=1.55.0",
    "tenacity>=9.0.0",

    # PDF parsing (census reports, PS&R summaries)
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",

    # Excel export (HFS-compatible workbooks)
    "xlsxwriter>=3.2.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # Observability
    "structlog>=24.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "httpx>=0.28.0",
]

[project.scripts]
cost-report-ai = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
